Section_5 WIP, finished upto video# 45

--- a/Section_5/Section_5_ARIMA.ipynb
+++ b/Section_5/Section_5_ARIMA.ipynb
@@ -1142,9 +1142,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31bf82e6",
+   "metadata": {},
+   "source": [
+    "**Stationarity and Hyperparameter selection**  \n",
+    "* How to select p, d, q?  \n",
+    "  -- By trial and error  \n",
+    "* But for ARIMA, there is a method  \n",
+    "* Stationarity will help to choose d  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74635507",
+   "metadata": {},
+   "source": [
+    "**Practical explaination of stationarity**  \n",
+    "* Distribution of random variables in time series do not change over time  \n",
+    "* Non stationary  \n",
+    "  -- has trend  \n",
+    "  -- variance is changing (increase / decrease)  \n",
+    "* Mean and variance will always be the same  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b936fd4",
+   "metadata": {},
+   "source": [
+    "**Testing for stationarity**  \n",
+    "* Augmented Dickey-Fuller test (ADF test)  \n",
+    "  -- Null and alternative hypothesis  \n",
+    "  -- Input: time series, Output: p-value  \n",
+    "  -- Action: accept or reject the null hypothesis  \n",
+    "* For ADF test:  \n",
+    "  -- Null: time series is non-stationary  \n",
+    "  -- Alternative: time series is stationary  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2239c7b5",
+   "metadata": {},
+   "source": [
+    "**How to use ADF test to select d**  \n",
+    "* Keep differencing until the result is stationary (check using ADF)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59ca1a84",
+   "metadata": {},
+   "source": [
+    "**Strong vs Weak**  \n",
+    "* 2 kinds of stationarity  \n",
+    "  -- Strong-sense stationarity (SSS)  \n",
+    "  -- Wesk-sense stationarity (WSS)  \n",
+    "* Strong: the entire distribution does not change over time (over any selection of RVs)  \n",
+    "  -- In practical application of time series analysis, Strong-sense stationarity is not used very often.  \n",
+    "* Weak: more practical kind of stationarity  \n",
+    "  -- Looks at first-order statistic (mean), and second-order statistic (autocovariance) rather than the full distribution  \n",
+    "\n",
+    "  -- Mean does not change over time  \n",
+    "\n",
+    "  -- ${\\mu}_{Y}(t) = {\\mu}_{Y}(t + {\\tau}) \\ for \\ all \\ {\\tau}$  \n",
+    "\n",
+    "  -- Autocovariance does not change over time  \n",
+    "  \n",
+    "  -- $K_{YY}(t_{1}, t_{2}) = K_{YY}(t_{1} - t_{2}, 0) \\ for \\ all \\ t_{1}, t{2}$  \n",
+    "  \n",
+    "  \n",
+    "* What is autocovariance?  \n",
+    "  -- Auto = Self (e.g. autoregressive = y(t) depends on its own past values!)  \n",
+    "  -- Autocovariance = Just the covariance of 2 RVs from the same time series  \n",
+    "  -- Covariance = unscaled correlation  \n",
+    "    * Not related: covariance = 0  \n",
+    "    * Move in the same direction: covariance > 0  \n",
+    "    * Move in the opposite direction: covariance < 0  \n",
+    "\n",
+    "  -- Variance is constant over time  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0afc1786",
+   "metadata": {},
+   "source": [
+    "**How is stationarity useful?**  \n",
+    "* If time series is nonstationary, than we can't use a single model to forecast (we might need different models at different points in time)  \n",
+    "* For nonstationary time series, we can't treat data points at different times like \"samples\" (e.g. computing the mean, variance)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af649af9",
+   "metadata": {},
+   "source": [
+    "**Lesson 46: Stationarity in code**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b9663c6",
+   "id": "80baa835",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a605947",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78a84305",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2512c499",
    "metadata": {},
    "outputs": [],
    "source": []
